--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ ipython-genutils==0.2.0
 isort==4.3.16
 jedi==0.13.3
 jeepney==0.4
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==3.0.1
 jupyter-client==5.2.4
 jupyter-core==4.4.0
@@ -106,9 +106,10 @@ testpath==0.4.2
 tornado==6.0.2
 traitlets==4.3.2
 typed-ast==1.3.2
-urllib3==1.24.1
+urllib3>=1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.15.1
+werkzeug>=0.15.3
 wrapt==1.11.1
 wurlitzer==1.0.2
+
